Make dashboard links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="bottom-left">
-      <img src="images/personal-photo.jpg" alt="user-image">
+      <a href="#"><img src="images/personal-photo.jpg" alt="user-image"></a>
       <div>
         <h4>Hi there</h4>
         <h1>Kocmac (@kocmac)</h1>
@@ -51,18 +51,18 @@
     </div>
 
     <ul>
-      <li><img src="images/home.png" alt="">Home</li>
-      <li><img src="images/profile.png" alt="">Profile</li>
-      <li><img src="images/message.png" alt="">Message</li>
-      <li><img src="images/history.png" alt="">History</li>
-      <li><img src="images/tasks.png" alt="">Task</li>
-      <li><img src="images/community.png" alt="">Communities</li>
+      <li><img src="images/home.png" alt=""><a href="#">Home</a></li>
+      <li><img src="images/profile.png" alt=""><a href="#">Profile</a></li>
+      <li><img src="images/message.png" alt=""><a href="#">Messages</a></li>
+      <li><img src="images/history.png" alt=""><a href="#">History</a></li>
+      <li><img src="images/tasks.png" alt=""><a href="#">Task</a></li>
+      <li><img src="images/community.png" alt=""><a href="#">Communities</a></li>
     </ul>
 
     <ul class="secondary-sidebar">
-      <li><img src="images/settings.png" alt="">Setting</li>
-      <li><img src="images/support.png" alt="">Support</li>
-      <li><img src="images/privacy.png" alt="">Privacy</li>
+      <li><img src="images/settings.png" alt=""><a href="#">Setting</a></li>
+      <li><img src="images/support.png" alt=""><a href="#">Support</a></li>
+      <li><img src="images/privacy.png" alt=""><a href="#">Privacy</a></li>
     </ul>
   </aside>
 <nav>
