Make project cards responsive

--- a/index.html
+++ b/index.html
@@ -76,60 +76,63 @@
       <div>
         <h2>Your Projects</h2>
       </div>
-      <div class="project-box">
-        <h2>Super Cool Project</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="">
-          <img src="images/star.png" alt="star">
-          <img src="images/eye.png" alt="eye">
-          <img src="images/share.png" alt="share">
+      <div class="project-cards">
+        <div class="project-box">
+          <h2>Super Cool Project</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="">
+            <img src="images/star.png" alt="star">
+            <img src="images/eye.png" alt="eye">
+            <img src="images/share.png" alt="share">
+          </div>
+        </div>
+        <div class="project-box">
+          <h2>Less Cool Project</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="">
+            <img src="images/star.png" alt="star">
+            <img src="images/eye.png" alt="eye">
+            <img src="images/share.png" alt="share">
+          </div>
+        </div>
+        <div class="project-box">
+          <h2>Impossible App</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="">
+            <img src="images/star.png" alt="star">
+            <img src="images/eye.png" alt="eye">
+            <img src="images/share.png" alt="share">
+          </div>
+        </div>
+        <div class="project-box">
+          <h2>Easy Peasy App</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="">
+            <img src="images/star.png" alt="star">
+            <img src="images/eye.png" alt="eye">
+            <img src="images/share.png" alt="share">
+          </div>
+        </div>
+        <div class="project-box">
+          <h2>Add Blocker</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="">
+            <img src="images/star.png" alt="star">
+            <img src="images/eye.png" alt="eye">
+            <img src="images/share.png" alt="share">
+          </div>
+        </div>
+        <div class="project-box">
+          <h2>Money Maker</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="">
+            <img src="images/star.png" alt="star">
+            <img src="images/eye.png" alt="eye">
+            <img src="images/share.png" alt="share">
+          </div>
         </div>
       </div>
-      <div class="project-box">
-        <h2>Less Cool Project</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="">
-          <img src="images/star.png" alt="star">
-          <img src="images/eye.png" alt="eye">
-          <img src="images/share.png" alt="share">
-        </div>
-      </div>
-      <div class="project-box">
-        <h2>Impossible App</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="">
-          <img src="images/star.png" alt="star">
-          <img src="images/eye.png" alt="eye">
-          <img src="images/share.png" alt="share">
-        </div>
-      </div>
-      <div class="project-box">
-        <h2>Easy Peasy App</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="">
-          <img src="images/star.png" alt="star">
-          <img src="images/eye.png" alt="eye">
-          <img src="images/share.png" alt="share">
-        </div>
-      </div>
-      <div class="project-box">
-        <h2>Add Blocker</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="">
-          <img src="images/star.png" alt="star">
-          <img src="images/eye.png" alt="eye">
-          <img src="images/share.png" alt="share">
-        </div>
-      </div>
-      <div class="project-box">
-        <h2>Money Maker</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="">
-          <img src="images/star.png" alt="star">
-          <img src="images/eye.png" alt="eye">
-          <img src="images/share.png" alt="share">
-        </div>
-      </div>
+
     </div>
     <section>
 
